--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="interest_rate_spreadsheet_with_stt">70dp</dimen>
+    <dimen name="interest_rate_spreadsheet_with">150dp</dimen>
 </resources>
