--- a/app/src/main/res/layout/activity_interest_rate_spreadsheet.xml
+++ b/app/src/main/res/layout/activity_interest_rate_spreadsheet.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.constraint.ConstraintLayout
-        style="@style/matchParent"
-        android:background="@color/colorWhite">
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/header"
-            layout="@layout/layout_header_interest_rate_spreadsheet" />
+        <LinearLayout
+            style="@style/matchParent"
+            android:background="@color/colorWhite"
+            android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvInterestRateSpreadsheet"
-            style="@style/matchWrap"
-            app:layout_constraintTop_toBottomOf="@+id/header" />
+            <include
+                android:id="@+id/header"
+                layout="@layout/layout_header_interest_rate_spreadsheet" />
 
-    </android.support.constraint.ConstraintLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvInterestRateSpreadsheet"
+                style="@style/matchParent" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
 </layout>
