--- a/app/src/main/res/layout/item_table_interest_rate_spreadsheet.xml
+++ b/app/src/main/res/layout/item_table_interest_rate_spreadsheet.xml
@@ -19,7 +19,7 @@
                 <TextView
                     android:id="@+id/tvSTT"
                     style="@style/txtItemBank"
-                    android:layout_weight="1.05"
+                    android:layout_width="@dimen/interest_rate_spreadsheet_with_stt"
                     android:text="STT" />
 
                 <View
@@ -29,7 +29,6 @@
                 <TextView
                     android:id="@+id/tvDate"
                     style="@style/txtItemBank"
-                    android:layout_weight="1"
                     android:text="Ngày trả" />
 
                 <View
@@ -39,7 +38,6 @@
                 <TextView
                     android:id="@+id/tvOriginalPay"
                     style="@style/txtItemBank"
-                    android:layout_weight="1"
                     android:text="Gốc phải trả" />
 
                 <View
@@ -49,7 +47,6 @@
                 <TextView
                     android:id="@+id/tvInterest"
                     style="@style/txtItemBank"
-                    android:layout_weight="1"
                     android:text="Lãi phải trả" />
 
                 <View
@@ -59,7 +56,6 @@
                 <TextView
                     android:id="@+id/tvTotal"
                     style="@style/txtItemBank"
-                    android:layout_weight="1"
                     android:text="Tổng phải trả" />
 
                 <View
@@ -69,7 +65,6 @@
                 <TextView
                     android:id="@+id/tvRest"
                     style="@style/txtItemBank"
-                    android:layout_weight="1"
                     android:text="Tổng phải trả" />
 
                 <View
