--- a/app/src/main/res/layout/layout_header_interest_rate_spreadsheet.xml
+++ b/app/src/main/res/layout/layout_header_interest_rate_spreadsheet.xml
@@ -20,7 +20,7 @@
         <TextView
             android:id="@+id/tvSTT"
             style="@style/txtItemBank"
-            android:layout_weight="1.05"
+            android:layout_width="@dimen/interest_rate_spreadsheet_with_stt"
             android:fontFamily="sans-serif-medium"
             android:text="STT"
             android:textColor="@color/colorWhite" />
@@ -32,7 +32,6 @@
         <TextView
             android:id="@+id/tvDate"
             style="@style/txtItemBank"
-            android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
             android:text="Ngày trả"
             android:textColor="@color/colorWhite" />
@@ -44,7 +43,6 @@
         <TextView
             android:id="@+id/tvOriginalPay"
             style="@style/txtItemBank"
-            android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
             android:text="Gốc phải trả"
             android:textColor="@color/colorWhite" />
@@ -56,7 +54,6 @@
         <TextView
             android:id="@+id/tvInterest"
             style="@style/txtItemBank"
-            android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
             android:text="Lãi phải trả"
             android:textColor="@color/colorWhite" />
@@ -68,7 +65,6 @@
         <TextView
             android:id="@+id/tvTotal"
             style="@style/txtItemBank"
-            android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
             android:text="Tổng phải trả"
             android:textColor="@color/colorWhite" />
@@ -80,8 +76,6 @@
         <TextView
             android:id="@+id/tvRest"
             style="@style/txtItemBank"
-            android:layout_weight="1"
-            android:textStyle=""
             android:fontFamily="sans-serif-medium"
             android:text="Tổng phải trả"
             android:textColor="@color/colorWhite" />
